src/test/ui/span/mut-ptr-cant-outlive-ref.stderr
error[E0597]: `b` does not live long enough
  --> $DIR/mut-ptr-cant-outlive-ref.rs:18:15
   |
LL |         p = &*b;
   |               ^ borrowed value does not live long enough
LL |     }
   |     - `b` dropped here while still borrowed
LL |     //~^^ ERROR `b` does not live long enough
LL | }
   | - borrowed value needs to live until here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0597"
